# phased-array-systems

./: 404.html  CHANGELOG.md  CLAUDE.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
api/: index.html
api/architecture/: index.html
api/io/: index.html
api/models/: index.html
api/reports/: index.html
api/requirements/: index.html
api/scenarios/: index.html
api/trades/: index.html
api/viz/: index.html
app/: requirements.txt  streamlit_app.py
app/pages/: 1_Single_Case.py  2_Trade_Study.py  3_RF_Cascade.py  4_Radar_Detection.py
changelog/: index.html
cli/: index.html
cli/doe/: index.html
cli/pareto/: index.html
cli/report/: index.html
cli/run/: index.html
contributing/: index.html
docs/: changelog.md
docs/api/: index.md
docs/theory/: link-budget-equations.md  pareto-optimization.md  phased-arrays.md  radar-equation.md
docs/user-guide/: link-budget.md  pareto-analysis.md  radar-detection.md  trade-studies.md
examples/: 01_comms_single_case.py  02_comms_doe_trade.py  03_radar_detection_trade.py  04_taper_trade_study.py  05_optimization.py
examples/configs/: comms_basic.yaml  radar_basic.yaml  radar_doe.yaml
faq/: index.html
getting-started/: index.html
getting-started/concepts/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
javascripts/: mathjax.js
notebooks/: tutorial_phased_array_trade_study.ipynb
search/: search_index.json
src/phased_array_systems/: __about__.py  __init__.py  cli.py  constants.py  evaluate.py
stylesheets/: extra.css
tests/: conftest.py  test_antenna_adapter.py  test_architecture.py  test_cli.py  test_comms_link_budget.py  test_digital.py  test_evaluate.py  test_io.py  test_optimization.py  test_radar.py  test_reports.py  test_rf_cascade.py  test_sensitivity.py
theory/: index.html
theory/link-budget-equations/: index.html
theory/pareto-optimization/: index.html
theory/phased-arrays/: index.html
theory/radar-equation/: index.html
tutorials/: index.html
tutorials/comms-trade-study/: index.html
tutorials/config-driven-workflow/: index.html
tutorials/radar-detection-trade/: index.html
tutorials/sensitivity-analysis/: index.html
user-guide/: index.html
user-guide/architecture/: index.html
user-guide/link-budget/: index.html
user-guide/pareto-analysis/: index.html
user-guide/radar-detection/: index.html
user-guide/reports/: index.html
(+48 files in other folders)
